# rust-stm32g474-template

./: Cargo.toml
.cargo/: config
.circleci/: config.yml
src/: main.rs
