[package]
edition = "2021"
name = "rust-stm32-blink"
version = "0.1.0"

[dependencies]
cmsis-dsp-sys = "0.3"
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.3"
embedded-hal = "0.2"
nb = "1"
panic-halt = "0.2"
stm32g4xx-hal = { git = "https://github.com/stm32-rs/stm32g4xx-hal", features = ["stm32g474", "rt"] }

[dependencies.stm32g4]
features = ["stm32g474", "rt"]
version = "0.14.0"
